# Dual-Vanity

./: Cargo.toml  README.md  dual_vanity.py
src/: main.rs
static/: app.js  index.html  style.css
